pss/constraints/01-allowed-proc-mount-types.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sPSPProcMount
metadata:
  name: psp-proc-mount
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod","Deployment","ReplicationController"]
  parameters:
    procMount: Default
