pss/constraints/03-Access-to-hostNetwork.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: psp-host-network-ports
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod","Deployment","ReplicationController"]
  parameters:
    hostNetwork: false
