pss/constraints/07-flexvolume-drivers.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sPSPFlexVolumes
metadata:
  name: psp-flexvolume-drivers
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod","Deployment","ReplicationController"]
  parameters:
    allowedFlexVolumes: #[]
    - driver: "example/lvm"
    - driver: "example/cifs"
