pss/constraints/08-host-namespaces.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sPSPHostNamespace
metadata:
  name: psp-host-namespace
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod","Deployment","ReplicationController"]
