pss/constraints/6-read-only-root-filesystem.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sPSPReadOnlyRootFilesystem
metadata:
  name: psp-readonlyrootfilesystem
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod","Deployment","ReplicationController"]
